<resources>
    <string name="app_name">Agenda Barber Pro</string>
    <string name="title">Agenda Barber Pro</string>
    <string name="agendar">Agendar</string>
    <string name="list">Lista</string>
    <string name="sair">Sair</string>
    <string name="nova_funcionalidade">New</string>
    <string name="name">Nome</string>
    <string name="timer">Horas</string>
    <string name="error_message">Preencha os campos vazios</string>

    <string name="sucesso"> Bem Sucedido </string>
    <string name="btn_ok"> OK </string>
    <string name="btn_salvar"> SALVAR </string>
    <string name="resultado">Conseguiu, Muito Bem Mano</string>
    <string name="agedamento_confirm">Agendamento Concluido</string>

    <string name="agedamento_confirm_db">Agendamento concluido com sucesso</string>
    <string name="agedamento_error_db">Erro ao salvar o agendamento</string>
    <string name="list_agend_client">Agendamento</string>
    <string name="hora_clt">Hora</string>
    <string name="day_week">Dia:</string>
    <string name="name_clt">Nome:</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="agenda_barber">Agenda Barber Pro</string>
    <string name="day">Dia:</string>
    <string name="hour_client">Hora:</string>


</resources>